remove vertical-align defined for icon as it is bugging on md page for EBI font icon

--- a/src/styles/interpro-new.css
+++ b/src/styles/interpro-new.css
@@ -173,7 +173,7 @@ div#local-title {
 /*SVG icons*/
 .icon {
   display: inline-block;
-  vertical-align: middle;
+  /*vertical-align: middle;*/
 }
 /*/MEMBER DATABASE icons*/
 /*ICONS*/
